[gd_scene load_steps=16 format=3 uid="uid://cxyrwtqlf6sc6"]

[ext_resource type="Script" path="res://scripts/ui_manager.gd" id="1_ssnyl"]
[ext_resource type="FontFile" uid="uid://ciydmudo7dbn6" path="res://sprites/Silkscreen.ttf" id="2_5fedp"]
[ext_resource type="Texture2D" uid="uid://c2imv7vjiliwr" path="res://sprites/sprite_0.png" id="3_a2ru0"]
[ext_resource type="Texture2D" uid="uid://d0nvo8k6aseo8" path="res://sprites/sprite_2.png" id="4_ls8o6"]
[ext_resource type="Texture2D" uid="uid://bmgamb5qccvh0" path="res://sprites/sprite_1.png" id="5_kdm1s"]
[ext_resource type="Script" path="res://scripts/custom_timer.gd" id="6_8360w"]
[ext_resource type="Script" path="res://scripts/bossfight.gd" id="7_36rad"]
[ext_resource type="PackedScene" uid="uid://b025vdpuk3vhe" path="res://nodes/player.tscn" id="7_nwakc"]
[ext_resource type="TileSet" uid="uid://d3jfvqxj2x0kj" path="res://tileset/tileset.tres" id="8_e37mg"]
[ext_resource type="Texture2D" uid="uid://du77p01w2tll5" path="res://sprites/box.png" id="11_5gqn2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_et0q6"]
bg_color = Color(0.643137, 0.643137, 0.643137, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t7d1y"]
bg_color = Color(0, 1, 0.552941, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cqkj3"]
bg_color = Color(1, 0.341176, 0.309804, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Environment" id="Environment_qnhap"]
background_mode = 3
glow_enabled = true
glow_levels/1 = 16.0
glow_levels/2 = 16.0
glow_levels/3 = 16.0
glow_levels/4 = 16.0
glow_levels/5 = 16.0
glow_levels/6 = 16.0
glow_levels/7 = 16.0
glow_normalized = true
glow_bloom = 1.0
glow_blend_mode = 4

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y6qa2"]
size = Vector2(48, 48)

[node name="Level12" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("1_ssnyl")
bossfight = true

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
process_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 288.0
offset_top = 50.0
offset_right = -288.0
offset_bottom = 77.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5fedp")
theme_override_styles/background = SubResource("StyleBoxFlat_et0q6")
theme_override_styles/fill = SubResource("StyleBoxFlat_t7d1y")
max_value = 1.0
value = 1.0

[node name="BossHealthBar" type="ProgressBar" parent="CanvasLayer"]
process_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 360.0
offset_top = 80.0
offset_right = -216.0
offset_bottom = 107.0
grow_horizontal = 2
scale = Vector2(0.75, 0.75)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5fedp")
theme_override_styles/background = SubResource("StyleBoxFlat_et0q6")
theme_override_styles/fill = SubResource("StyleBoxFlat_cqkj3")

[node name="Label" type="Label" parent="CanvasLayer"]
process_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_5fedp")
theme_override_font_sizes/font_size = 75
text = "20.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseScreen" type="ColorRect" parent="CanvasLayer"]
process_mode = 2
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -216.0
offset_right = 384.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="Label" type="Label" parent="CanvasLayer/PauseScreen"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 75.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_5fedp")
theme_override_font_sizes/font_size = 40
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" type="TextureButton" parent="CanvasLayer/PauseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -307.0
offset_top = -25.0
offset_right = -107.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("3_a2ru0")
texture_pressed = ExtResource("4_ls8o6")
texture_hover = ExtResource("5_kdm1s")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/PauseScreen/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5fedp")
theme_override_font_sizes/font_size = 23
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume" type="TextureButton" parent="CanvasLayer/PauseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -35.0
offset_right = 100.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_a2ru0")
texture_pressed = ExtResource("4_ls8o6")
texture_hover = ExtResource("5_kdm1s")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/PauseScreen/Resume"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5fedp")
theme_override_font_sizes/font_size = 25
text = "Resume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Restart" type="TextureButton" parent="CanvasLayer/PauseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 159.0
offset_top = -25.0
offset_right = 359.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("3_a2ru0")
texture_pressed = ExtResource("4_ls8o6")
texture_hover = ExtResource("5_kdm1s")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/PauseScreen/Restart"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5fedp")
theme_override_font_sizes/font_size = 25
text = "Restart"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinishScreen" type="ColorRect" parent="CanvasLayer"]
process_mode = 2
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -216.0
offset_right = 384.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="Status" type="Label" parent="CanvasLayer/FinishScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -56.0
offset_top = 80.0
offset_right = 56.0
offset_bottom = 106.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_5fedp")
text = "[Un]successful"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/FinishScreen"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 75.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_5fedp")
theme_override_font_sizes/font_size = 40
text = "You Died!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" type="TextureButton" parent="CanvasLayer/FinishScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -326.0
offset_top = -27.0
offset_right = -126.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9, 0.9)
texture_normal = ExtResource("3_a2ru0")
texture_pressed = ExtResource("4_ls8o6")
texture_hover = ExtResource("5_kdm1s")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/FinishScreen/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.22223
offset_right = -2.22223
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5fedp")
theme_override_font_sizes/font_size = 23
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Restart" type="TextureButton" parent="CanvasLayer/FinishScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -35.0
offset_right = 100.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_a2ru0")
texture_pressed = ExtResource("4_ls8o6")
texture_hover = ExtResource("5_kdm1s")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/FinishScreen/Restart"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5fedp")
theme_override_font_sizes/font_size = 25
text = "Restart"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit" type="TextureButton" parent="CanvasLayer/FinishScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 155.0
offset_top = -27.0
offset_right = 355.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9, 0.9)
texture_normal = ExtResource("3_a2ru0")
texture_pressed = ExtResource("4_ls8o6")
texture_hover = ExtResource("5_kdm1s")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/FinishScreen/Quit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5fedp")
theme_override_font_sizes/font_size = 25
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Setup" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="Setup"]
zoom = Vector2(2, 2)
position_smoothing_enabled = true

[node name="CustomTimer" type="Node2D" parent="Setup"]
script = ExtResource("6_8360w")
enabled = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="Setup"]
environment = SubResource("Environment_qnhap")

[node name="Environment" type="Node2D" parent="."]

[node name="Player" parent="Environment" instance=ExtResource("7_nwakc")]
position = Vector2(-79, 5)
collision_layer = 3
camera_should_follow = false
bossfight = true

[node name="TileMap" type="TileMap" parent="Environment"]
tile_set = ExtResource("8_e37mg")
format = 2
layer_0/tile_data = PackedInt32Array(131069, 65536, 0, 131070, 65536, 0, 131071, 65536, 0, 65536, 65536, 0, 65537, 65536, 0, 65538, 65536, 0, 65539, 65536, 0, 131068, 65536, 0, 196604, 65536, 1, 262140, 65536, 2, 262141, 65536, 2, 262142, 65536, 2, 262143, 65536, 2, 196608, 65536, 2, 196609, 65536, 2, 196610, 65536, 2, 196611, 65536, 2, 131075, 65536, 1, 131074, 65536, 1, 131073, 65536, 1, 131072, 65536, 1, 196607, 65536, 1, 196606, 65536, 1, 196605, 65536, 1, 131067, 65536, 0, 131066, 65536, 0, 65540, 65536, 0, 65541, 65536, 0, 65542, 131072, 0, 131065, 0, 0, 196601, 0, 1, 262137, 0, 2, 262138, 65536, 2, 262139, 65536, 2, 196612, 65536, 2, 196613, 65536, 2, 196614, 131072, 2, 131078, 131072, 1, 131077, 65536, 1, 131076, 65536, 1, 196603, 65536, 1, 196602, 65536, 1)

[node name="BossFight" type="Area2D" parent="Environment"]
position = Vector2(350, -68)
script = ExtResource("7_36rad")
stage_count = 2
health = 3.0

[node name="Sprite2D" type="Sprite2D" parent="Environment/BossFight"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("11_5gqn2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/BossFight"]
shape = SubResource("RectangleShape2D_y6qa2")

[node name="StartLocation" type="Node2D" parent="Environment/BossFight"]
position = Vector2(-224, 32)

[node name="EndLocation" type="Node2D" parent="Environment/BossFight"]
position = Vector2(224, 32)

[node name="StageTimer" type="Timer" parent="Environment/BossFight"]

[connection signal="pressed" from="CanvasLayer/PauseScreen/Menu" to="CanvasLayer" method="main_menu"]
[connection signal="pressed" from="CanvasLayer/PauseScreen/Resume" to="CanvasLayer" method="toggle_pause"]
[connection signal="pressed" from="CanvasLayer/PauseScreen/Restart" to="CanvasLayer" method="restart"]
[connection signal="pressed" from="CanvasLayer/FinishScreen/Menu" to="CanvasLayer" method="main_menu"]
[connection signal="pressed" from="CanvasLayer/FinishScreen/Restart" to="CanvasLayer" method="restart"]
[connection signal="pressed" from="CanvasLayer/FinishScreen/Quit" to="CanvasLayer" method="quit"]
[connection signal="body_entered" from="Environment/BossFight" to="Environment/BossFight" method="body_entered"]
[connection signal="timeout" from="Environment/BossFight/StageTimer" to="Environment/BossFight" method="pick_new_stage"]
